js/js.translator/testData/incremental/invalidation/interfaceWithJsExport/lib1/lib.0.kt
interface Foo {
    fun foo(): String
}